--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,24 +7,44 @@
         android:id="@+id/imgView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"></ImageView>
-    <Button
-        android:id="@+id/buttonLoadPicture"
+        android:layout_weight="1">
+    </ImageView>
+
+    <!-- Textview if showing a hidden message, EditText if hiding one -->
+    <TextView
+        android:id="@+id/txtShowMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:text="Load Picture"
-        android:layout_gravity="center"></Button>
+        android:text=""></TextView>
+    <EditText
+        android:id="@+id/editHideMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Secret message"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/buttonShowMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Show Message"
+            android:layout_gravity="left">
+        </Button>
+        <Button
+            android:id="@+id/buttonHideMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Hide Message"
+            android:layout_gravity="right">
+        </Button>
+    </LinearLayout>
 </LinearLayout>
 
 
 
-    <!--TextView
-        android:id="@+id/sample_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" -->
+
