--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,8 @@
         android:id="@+id/txtShowMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""></TextView>
+        android:text="" />
+
     <EditText
         android:id="@+id/editHideMessage"
         android:layout_width="match_parent"
